# itchy

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  integer-simple-snapshot.yaml  itchy-runner.hs  itchy.cabal  itchyd.hs  package.json  stack.yaml
Itchy/: Itch.hs  ItchCache.hs  ItchInvestigator.hs  Localization.hs  Report.hs  Routes.hs  Static.hs
Itchy/Localization/: En.hs  RichText.hs  Ru.hs
Itchy/Report/: Analysis.hs  Record.hs
containers/: update.yml
containers/itchyd/: Dockerfile  docker-compose.yml
containers/runner/: Dockerfile
design/: arch.html  ideas.md  report_template.html  styles.css
static-stylus/: itchy.css
