name:                itchy
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable itchyd
  main-is:             itchyd.hs
  other-modules:
    Itchy.Itch
    Itchy.ItchCache
    Itchy.ItchInvestigator
    Itchy.Localization
    Itchy.Localization.En
    Itchy.Localization.RichText
    Itchy.Localization.Ru
    Itchy.Report
    Itchy.Report.Analysis
    Itchy.Report.Record
    Itchy.Routes
    Itchy.Static
  build-depends:
    aeson
    , base
    , blaze-html
    , blaze-markup
    , bytestring
    , cereal
    , cereal-text
    , cereal-vector
    , containers
    , cookie
    , cryptonite
    , directory
    , flaw-base
    , flaw-lmdb
    , hashable
    , http-client
    , http-client-tls
    , http-types
    , memory
    , mime-types
    , optparse-applicative
    , process
    , scientific
    , stm
    , template-haskell
    , text
    , unix
    , unordered-containers
    , vector
    , wai-app-static
    , wai-extra
    , wai-routes
    , warp
    , yaml
  default-language:    Haskell2010

executable itchy-runner
  main-is:             itchy-runner.hs
  other-modules:
    Itchy.Itch
    Itchy.Report
  build-depends:
    aeson
    , base
    , bytestring
    , cereal
    , cereal-text
    , containers
    , directory
    , flaw-base
    , hashable
    , htoml
    , http-client
    , http-client-tls
    , http-types
    , magic
    , optparse-applicative
    , process
    , scientific
    , unix
    , unordered-containers
    , vector
    , text
    , yaml
  default-language:    Haskell2010
